--- a/thoughtworks.css
+++ b/thoughtworks.css
@@ -239,3 +239,40 @@ textarea, .thoughtbox {
 .add-date-input-container {
     text-align: right;
 }
+
+
+
+
+
+@font-face {
+font-family: 'IcoMoon-Free';
+src: url('IcoMoon-Free.ttf?-b7qzp2') format('truetype');
+font-weight: normal;
+font-style: normal;
+}
+.icon {
+font-family: 'IcoMoon-Free';
+speak: none;
+font-style: normal;
+font-weight: normal;
+font-variant: normal;
+text-transform: none;
+line-height: 1;
+/* Enable Ligatures ================ */
+-webkit-font-feature-settings: "liga";
+-moz-font-feature-settings: "liga=1";
+-moz-font-feature-settings: "liga";
+-ms-font-feature-settings: "liga" 1;
+-o-font-feature-settings: "liga";
+font-feature-settings: "liga";
+/* Better Font Rendering =========== */
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-bin:before {
+content: "\e9ac";
+}
+.icon-bin2:before {
+content: "\e9ad";
+}
