--- a/src/less/thoughtworks.less
+++ b/src/less/thoughtworks.less
@@ -282,7 +282,7 @@ textarea, .thoughtbox {
 
 @font-face {
 font-family: 'IcoMoon-Free';
-src: url('IcoMoon-Free.ttf?-b7qzp2') format('truetype');
+src: url('../fonts/IcoMoon-Free.ttf?-b7qzp2') format('truetype');
 font-weight: normal;
 font-style: normal;
 }
