--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -12,8 +12,8 @@
     </ul>
 
     <p>
-        ThoughtStore is made by <a href="http://www.112percent.com">Byron Williams</a>
-        and <a href="https://twitter.com/lloydkatz">Lloyd Katz</a>. Hosted with
-        <a href="http://www.figroll.io">Figroll</a>.
+        You can start writing now, just type something into the box below.<br />
+        Or
+        you can <a ui-sref="authenticate">Login / Sign Up</a>.
     </p>
 </div>
