Login error messages

--- a/src/less/thoughtworks.less
+++ b/src/less/thoughtworks.less
@@ -318,3 +318,21 @@ content: "\e961";
     line-height: 1.6em;
     color:#333;
 }
+
+input.ng-invalid.ng-touched {
+    background-color: #FA787E;
+}
+
+input.ng-valid.ng-touched {
+    background-color: #78FA89;
+}
+
+aside {
+    background: none repeat scroll 0% 0% #1F8DD6;
+    padding: 1em;
+    border-radius: 3px;
+    color: #FFF;
+
+    margin:0px 10px 10px 0;
+    background-color: #DA344D;
+}
