--- a/src/partials/thoughts/list.html
+++ b/src/partials/thoughts/list.html
@@ -1,4 +1,4 @@
-<div>
+<div class="content-scrollable" scroll-glue>
   <div class="posts">
     <section class="post" ng-if="group.thoughts.length" ng-repeat="group in vm.syncedPosts">
       <header class="post-header">
