--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,19 +1,21 @@
 <div class="about-page pure-u-1 pure-u-lg-4-5">
-    <h1>About the ThoughtStore</h1>
+    <h1>Your JRNL</h1>
     <p>
-        We humans do a lot of thinking, use ThoughtStore as a Diary or Journal to
+        We humans do a lot of thinking, use JRNL as a Diary or Journal to
         keep track of what's going on in your life, your project or anything else
         you can think of.
     </p>
 
     <ul>
-        <li>Thoughts are <b>private</b> and only available to your user</li>
+        <li>Thoughts are <b>private</b> and only available to you</li>
         <li>Thoughts are never shared with anyone</li>
     </ul>
 
     <p>
-        You can start writing now, just type something into the box below.<br />
-        Or
-        you can <a ui-sref="authenticate">Login / Sign Up</a>.
+        You need an account to use JRNL - <a ui-sref="authenticate">Login / Sign Up</a>.
     </p>
+
+<!--     <p>&nbsp;</p>
+
+    <h2>FAQ</h2> -->
 </div>
