--- a/src/partials/thoughts/add.html
+++ b/src/partials/thoughts/add.html
@@ -1,28 +1,27 @@
-    <div class="new-thought pure-u-1 pure-u-md-3-4">
-<section class="add">
-  <div class="add-area">
-    <textarea
-    class="thoughtbox"
-    placeholder="Enter something"
-    ng-model="vm.text"
-    autofocus
-    tabindex="1"
-    ></textarea>
-  </div>
-  <div class="pure-g">
-    <div class="pure-u-4-5">
-      <button
-        type="submit"
-        class="pure-button pure-input-1-2 pure-button-primary"
-        data-ng-click="vm.add()"
-        tabindex="3"
-      >
-      Add Thought
-      </button>
+<div class="new-thought pure-u-1 pure-u-md-3-4">
+  <section class="add">
+    <div class="add-area">
+      <textarea
+        class="thoughtbox"
+        placeholder="Enter something"
+        ng-model="vm.text"
+        autofocus
+        tabindex="1">
+      </textarea>
     </div>
-    <div class="pure-u-1-5 add-date-input-container">
-      <input type="date" ng-model="vm.date" placeholder="yyyy-MM-dd" tabindex="2" />
+    <div class="pure-g">
+      <div class="pure-u-4-5">
+        <button
+          type="submit"
+          class="pure-button pure-input-1-2 pure-button-primary"
+          data-ng-click="vm.add()"
+          tabindex="3">
+        Add Thought
+        </button>
+      </div>
+      <div class="pure-u-1-5 add-date-input-container">
+        <input type="date" ng-model="vm.date" placeholder="yyyy-MM-dd" tabindex="2" />
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 </div>
