--- a/src/partials/thoughts/add_outer.html
+++ b/src/partials/thoughts/add_outer.html
@@ -1,3 +1,5 @@
-<div class="new-thought pure-u-1 pure-u-md-3-4">
-    <div data-add-thought></div>
+<div ng-controller="AddOuterCtrl as addouter">
+    <div class="new-thought pure-u-1 pure-u-md-3-4" data-ng-if="addouter.isLoggedIn">
+        <div data-add-thought></div>
+    </div>
 </div>
