--- a/src/partials/thoughts/list.html
+++ b/src/partials/thoughts/list.html
@@ -1,29 +1,17 @@
 <div class="content-scrollable" scroll-glue>
   <div class="posts">
-    <section class="post" ng-if="group.thoughts.length" ng-repeat="group in vm.syncedPosts">
+    <section class="post" ng-if="group.thoughts.length" ng-repeat="group in vm.posts">
       <header class="post-header">
         <h1 class="content-subhead">{{group.group|date:"EEEE d MMMM"}}</h1>
       </header>
       <div data-one-thought thought="item" ng-repeat="item in group.thoughts">X</div>
     </section>
-  </div>
-  <div class="import-required" ng-if="vm.loaded && vm.hasUnsyncedPosts">
-    <hr />
-    <h2>Unimported Posts</h2>
-    <div class="posts">
-      <section class="post" ng-if="group.thoughts.length" ng-repeat="group in vm.unsyncedPosts">
-        <header class="post-header">
-          <h1 class="content-subhead">{{group.group|date:"EEEE d MMMM"}}</h1>
-        </header>
-        <div  data-one-thought
-              thought="item"
-              import-mode="true"
-              ng-repeat="item in group.thoughts"></div>
-      </section>
-    </div>
+    <section class="post" ng-if="!group.thoughts.length && vm.isLoggedIn">
+      <i>Type in the box at the bottom to start writing</i>
+    </section>
   </div>
   <div ng-include="'/partials/about.html'"
-       ng-show="vm.loaded && !(vm.hasUnsyncedPosts || vm.hasSyncedPosts)">
+       ng-if="!vm.loggedIn">
   </div>
 </div>
 
